apps/etherpad/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etherpad
  namespace: edu-etherpad
  labels:
    app: etherpad
spec:
  replicas: 2
  selector:
    matchLabels:
      app: etherpad
  template:
    metadata:
      labels:
        app: etherpad
    spec:
      containers:
        - name: etherpad
          image: etherpad/etherpad:1.9.6
          ports:
            - name: http
              containerPort: 9001
          
          resources:
            requests:
              cpu: 500m
              memory: 2Gi
            limits:
              cpu: 1000m
              memory: 4Gi
          
          volumeMounts:
            - name: data
              mountPath: /opt/etherpad-lite/var
      
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: etherpad-data

---
apiVersion: v1
kind: Service
metadata:
  name: etherpad
  namespace: edu-etherpad
spec:
  type: ClusterIP
  selector:
    app: etherpad
  ports:
    - port: 9001
      targetPort: 9001

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: etherpad
  namespace: edu-etherpad
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: core-sso-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - etherpad.zsel.opole.pl
      secretName: etherpad-tls
  rules:
    - host: etherpad.zsel.opole.pl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: etherpad
                port:
                  number: 9001
